Fix: Post Grid | Entry footer extra spacing

--- a/src/css/view/post-grid.scss
+++ b/src/css/view/post-grid.scss
@@ -117,6 +117,10 @@
 	padding: 15px;
 }
 
+.eael-grid-post .eael-entry-header-after.style-two {
+	padding: 0;
+}
+
 .eael-post-grid .eael-entry-wrapper > .eael-entry-meta span.eael-posted-on,
 .eael-post-grid .eael-entry-wrapper > .eael-entry-header-after .eael-entry-meta span.eael-posted-on {
 	padding-left: 5px;
